package com.randioo.doudizhu_server.protocol;

message RoleData{
	optional int32 roleId = 1;
	optional string name = 2;
	optional int32 money = 3;
	optional int32 volume = 4;
	optional int32 musicVolume = 5;
	optional string headImgUrl = 6;
	optional int32 randiooMoney = 7;
}

message GameConfig{
	optional int32 round = 1;
	optional int32 di = 2;
	optional bool moguai = 3;
	optional bool mingpai = 4;
}
message PaiNum{
	optional int32 seated = 1;
	optional int32 num = 2;
}

message Record{
	optional int32 seated = 1;
	repeated int32 pai = 2;
}

enum GameType{
	GAME_TYPE_MATCH = 1;
	GAME_TYPE_FRIEND = 2;
}

message GameRoleData{
	optional string gameRoleId = 1;
	optional string name = 2;
	optional int32 seated = 3;
	optional bool ready = 4;
	optional string headImgUrl = 5;
	optional int32 money = 6;
}

enum GameState{
	GAME_STATE_PREPARE = 1;
	GAME_START_START = 2;
	GAME_START_END = 3;
}